--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- HTML Meta Tags -->
+		
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L9XM1PEXG6"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-L9XM1PEXG6');
+		</script>
+
 		<title>aegea - Singer/Songwriter Performing Artist</title>
 		<meta name="description" content="Layout formations on scroll using GSAP">
 		<link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +30,7 @@
 
 			<header class="page-header">
 				<span class="menu-links">
-					<a href="#">Music</a>
+					<a href="aegeamusic.bandcamp.com">Music</a>
 					<a href="#contact">Contact</a>
 				</span>
 
@@ -27,10 +38,10 @@
 
 				<span class="social-links">
 					<!-- <a href="#"><img src="img/twitter.png" alt="aegea on Twitter" style="height: 40px;"></a> -->
-					<a href="#"><img src="img/instagram.png" alt="aegea on Instagram" style="height: 40px;"></a>
-					<a href="#"><img src="img/tiktok.png" alt="aegea on TikTok" style="height: 40px;"></a>
-					<a href="#"><img src="img/youtube.png" alt="aegea on YouTube" style="height: 40px;"></a>
-					<a href="#"><img src="img/spotify.png" alt="aegea on Spotify" style="height: 40px;"></a>
+					<a href="https://www.instagram.com/aegeamezzo/"><img src="img/instagram.png" alt="aegea on Instagram" style="height: 40px;"></a>
+					<a href="https://www.tiktok.com/@aegea755"><img src="img/tiktok.png" alt="aegea on TikTok" style="height: 40px;"></a>
+					<!-- <a href="#"><img src="img/youtube.png" alt="aegea on YouTube" style="height: 40px;"></a> -->
+					<!-- <a href="#"><img src="img/spotify.png" alt="aegea on Spotify" style="height: 40px;"></a> -->
 				</span>
 			</header>
 
@@ -89,8 +100,7 @@
 				<ul>
 					<li><strong>GENERAL</strong>: <a href="mailto:contact@aegeamusic.com">contact@aegeamusic.com</a></li>
 					<li><strong>BOOK</strong>: <a href="mailto:booking@aegeamusic.com">booking@aegeamusic.com</a></li>
-					<li><strong>US/NA PRESS</strong>: <a href="mailto:press@aegeamusic.com">press@aegeamusic.com</a></li>
-					<li><strong>UK/EU PRESS</strong>: <a href="mailto:press.eu@aegeamusic.com">press.eu@aegeamusic.com</a></li>
+					<li><strong>PRESS</strong>: <a href="mailto:press@aegeamusic.com">press@aegeamusic.com</a></li>
 				</ul>
 			</section>
 
