adds soundcloud link

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 
 			<header class="page-header">
 				<span class="menu-links">
-					<a href="aegeamusic.bandcamp.com">Music</a>
+					<!-- <a href="aegeamusic.bandcamp.com">Music</a> -->
 					<a href="#contact">Contact</a>
 				</span>
 
 				<img src="./img/aegea.svg" class="logo" alt="aegea"/>
 
 				<span class="social-links">
-					<!-- <a href="#"><img src="img/twitter.png" alt="aegea on Twitter" style="height: 40px;"></a> -->
 					<a href="https://www.instagram.com/aegeamezzo/"><img src="img/instagram.png" alt="aegea on Instagram" style="height: 40px;"></a>
 					<a href="https://www.tiktok.com/@aegea755"><img src="img/tiktok.png" alt="aegea on TikTok" style="height: 40px;"></a>
+					<a href="https://www.tiktok.com/@aegea755"><img src="img/soundcloud.png" alt="aegea on TikTok" style="height: 40px;"></a>
 					<!-- <a href="#"><img src="img/youtube.png" alt="aegea on YouTube" style="height: 40px;"></a> -->
-					<!-- <a href="#"><img src="img/spotify.png" alt="aegea on Spotify" style="height: 40px;"></a> -->
+					<a href="https://open.spotify.com/artist/2Eniro3EWJNB7CfpaUjvpH?nd=1&dlsi=d2a7f6fe01d048cf"><img src="img/spotify.png" alt="aegea on Spotify" style="height: 40px;"></a>
 				</span>
 			</header>
 
