--- a/index.html
+++ b/index.html
@@ -39,20 +39,31 @@
 				<span class="social-links">
 					<a href="https://www.instagram.com/aegeamezzo/"><img src="img/instagram.png" alt="aegea on Instagram" style="height: 40px;"></a>
 					<a href="https://www.tiktok.com/@aegea755"><img src="img/tiktok.png" alt="aegea on TikTok" style="height: 40px;"></a>
-					<a href="https://www.tiktok.com/@aegea755"><img src="img/soundcloud.png" alt="aegea on Sound Cloud" style="height: 40px;"></a>
-					<!-- <a href="#"><img src="img/youtube.png" alt="aegea on YouTube" style="height: 40px;"></a> -->
+					<a href="https://soundcloud.com/aegea-498177073"><img src="img/soundcloud.png" alt="aegea on Sound Cloud" style="height: 40px;"></a>
 					<a href="https://music.apple.com/us/artist/aegea/1809748995"><img src="img/apple-music.png" alt="aegea on Apple Music" style="height: 40px;"></a>
 					<a href="https://open.spotify.com/artist/2Eniro3EWJNB7CfpaUjvpH?nd=1&dlsi=d2a7f6fe01d048cf"><img src="img/spotify.png" alt="aegea on Spotify" style="height: 40px;"></a>
 				</span>
+
+				<div class="hamburger">
+					<div class="line"></div>
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
 			</header>
 
 			<div id="mobile-menu">
-				<ul>
-					<li><a href=""></a></li>
 
-					<a href="https://www.instagram.com/aegeamezzo/"><img src="img/instagram.png" alt="aegea on Instagram" style="height: 40px;"></a>
-					<a href="https://www.tiktok.com/@aegea755"><img src="img/tiktok.png" alt="aegea on TikTok" style="height: 40px;"></a>
-					<a href="https://www.tiktok.com/@aegea755"><img src="img/soundcloud.png" alt="aegea on TikTok" style="height: 40px;"></a>
+				<div class="close-icon">
+					<div class="line line1"></div>
+					<div class="line line2"></div>
+				</div>
+
+				<ul>
+					<li><a href="https://www.instagram.com/aegeamezzo/">Instagram</a></li>
+					<li><a href="https://www.tiktok.com/@aegea755">TikTok</a></li>
+					<li><a href="https://soundcloud.com/aegea-498177073">Soundcloud</a></li>
+					<li><a href="https://music.apple.com/us/artist/aegea/1809748995">Apple Music</a></li>
+					<li><a href="https://open.spotify.com/artist/2Eniro3EWJNB7CfpaUjvpH?nd=1&dlsi=d2a7f6fe01d048cf">Spotify</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
